--- a/pages/19506.html
+++ b/pages/19506.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sheldon Glashow in nLab
+      Howard Georgi in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sheldon Glashow
+      Howard Georgi
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8703/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,28 +308,24 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li><a href='http://en.wikipedia.org/wiki/Sheldon_Lee_Glashow'>Wikipedia entry</a></li>
-</ul>
-
-<h2 id='writings'>Writings</h2>
-
-<ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Paul+Ginsparg'>Paul Ginsparg</a>, Sheldon Glashow, <em>Desperately Seeking Superstrings</em>, Phys.Today 86N5 (1986) 7-9 (<a href='https://arxiv.org/abs/physics/9403001'>arXiv:physics/9403001</a>, <a href='https://physicstoday.scitation.org/doi/10.1063/1.2814991'>doi:10.1063/1.2814991</a>)</p>
-
-<p>on <a class='existingWikiWord' href='/nlab/show/string+theory'>superstring theory</a></p>
-</li>
-</ul>
-
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_c8b3e589586cd2fcb14eb9ea804d81647ba1a3cc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a></p>
+<p><a href='http://www.people.fas.harvard.edu/~hgeorgi/'>webpage</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/GUT'>GUT</a>, <a class='existingWikiWord' href='/nlab/show/gauge+coupling+unification'>gauge coupling unification</a></p>
+<p><a href='https://en.wikipedia.org/wiki/Howard_Georgi'>Wikipedia entry</a></p>
+</li>
+</ul>
+
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_eb8fd6d4f380422c7ec3c6562437859558573933_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/GUT'>GUT</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gauge+coupling+unification'>gauge coupling unification</a></p>
 </li>
 </ul>
 
@@ -338,22 +334,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July  6, 2018 at 14:03:41.
-  See the <a href="https://ncatlab.org/nlab/history/Sheldon Glashow" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on July  6, 2018 at 14:02:07.
+  See the <a href="https://ncatlab.org/nlab/history/Howard Georgi" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sheldon+Glashow" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sheldon+Glashow/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Sheldon+Glashow" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sheldon+Glashow" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Sheldon Glashow/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Howard+Georgi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Howard Georgi/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Sheldon+Glashow" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Howard+Georgi" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Sheldon+Glashow" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Howard+Georgi" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sheldon+Glashow" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Howard+Georgi" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
