--- a/pages/19507.html
+++ b/pages/19507.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      modification in nLab
+      2-functor 2-category in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      modification
+      2-functor 2-category
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8704/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -509,39 +509,44 @@ margin-left: 0em;
 </div>
 </div>
 
-<h1 id='modifications'>Modifications</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definitions_2'>Definitions</a></li><li><a href='#generalisation'>Generalisation</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/transfor'>transfor</a> between <a class='existingWikiWord' href='/nlab/show/pseudonatural+transformation'>pseudo</a>/<a class='existingWikiWord' href='/nlab/show/lax+natural+transformation'>lax natural transformations</a> is sometimes called a <em>modification</em>. Hence modifications are the <a class='existingWikiWord' href='/nlab/show/3-morphism'>3-morphisms</a> in a <a class='existingWikiWord' href='/nlab/show/3-category'>3-category</a> <a class='existingWikiWord' href='/nlab/show/2Cat'>2Cat</a> of <a class='existingWikiWord' href='/nlab/show/2-category'>2-categories</a> and <a class='existingWikiWord' href='/nlab/show/2-functor'>2-functors</a> between them.</p>
+<p>The analog of <em><a class='existingWikiWord' href='/nlab/show/functor+category'>functor category</a></em> as <a class='existingWikiWord' href='/nlab/show/category'>categories</a> are generalized to <em><a class='existingWikiWord' href='/nlab/show/2-category'>2-categories</a></em>.</p>
 
-<p>Just as a <a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformation</a> between <a class='existingWikiWord' href='/nlab/show/functor'>functor</a>s is a collection of <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>-cells indexed by <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>-cells, a <em>modification</em> between transformations is an indexed collection of 2-cells.</p>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_0c4129da1cef78d92353350012ff885a23d6d765_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_0c4129da1cef78d92353350012ff885a23d6d765_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>\mathcal{D}</annotation></semantics></math> two <a class='existingWikiWord' href='/nlab/show/2-category'>2-categories</a>, their <em>2-functor 2-category</em> (or <em><a class='existingWikiWord' href='/nlab/show/bifunctor'>bifunctor</a> <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategory</a></em> ) is the 2-category whose</p>
 
-<h2 id='definitions_2'>Definitions</h2>
+<ol>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/object'>objects</a> are <a class='existingWikiWord' href='/nlab/show/2-functor'>2-functors</a> from <math class='maruku-mathml' display='inline' id='mathml_0c4129da1cef78d92353350012ff885a23d6d765_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_0c4129da1cef78d92353350012ff885a23d6d765_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>\mathcal{D}</annotation></semantics></math>,</p>
+</li>
 
-<p>To be most general, start with <a class='existingWikiWord' href='/nlab/show/lax+natural+transformation'>lax transformations</a> <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>α</mi><mo>,</mo><mi>β</mi><mo>:</mo><mi>F</mi><mover><mo>→</mo><mo>˙</mo></mover><mi>G</mi><mo>:</mo><mi>C</mi><mo>→</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>\alpha, \beta : F \dot{\to} G : C \to D</annotation></semantics></math>. Given those, a modification <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi><mo>:</mo><mi>α</mi><mover><mo>→</mo><mo>¨</mo></mover><mi>β</mi></mrow><annotation encoding='application/x-tex'>m : \alpha \ddot{\to} \beta</annotation></semantics></math> assigns to each <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>-cell <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>∈</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>A\in
-C</annotation></semantics></math> a <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-cell <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>m</mi> <mi>A</mi></msub><mo>:</mo><msub><mi>α</mi> <mi>A</mi></msub><mo>⇒</mo><msub><mi>β</mi> <mi>A</mi></msub></mrow><annotation encoding='application/x-tex'>m_A : \alpha_A \Rightarrow \beta_A</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> that commutes suitably with the <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-cell components of <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>α</mi></mrow><annotation encoding='application/x-tex'>\alpha</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>β</mi></mrow><annotation encoding='application/x-tex'>\beta</annotation></semantics></math> (see Leinster for details).</p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/1-morphism'>1-morphisms</a> are <a class='existingWikiWord' href='/nlab/show/pseudonatural+transformation'>pseudonatural transformations</a> of 2-functors;</p>
+</li>
 
-<p>If <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>α</mi><mo>,</mo><mi>β</mi></mrow><annotation encoding='application/x-tex'>\alpha,\beta</annotation></semantics></math> are strict transformations, then the complicated-looking modification condition becomes simply a naturality square with globs <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>m</mi> <mi>A</mi></msub><mo>:</mo><msub><mi>α</mi> <mi>A</mi></msub><mo>⇒</mo><msub><mi>β</mi> <mi>A</mi></msub></mrow><annotation encoding='application/x-tex'>m_A : \alpha_A \Rightarrow
-\beta_A</annotation></semantics></math> where the <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>-cells <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>α</mi> <mi>A</mi></msub></mrow><annotation encoding='application/x-tex'>\alpha_A</annotation></semantics></math> would normally be.</p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-morphism'>2-morphisms</a> are <a class='existingWikiWord' href='/nlab/show/modification'>modifications</a> of pseudonatural transformations</p>
+</li>
+</ol>
 
-<h2 id='generalisation'>Generalisation</h2>
-
-<p>When you get tired of thinking individually about <math class='maruku-mathml' display='inline' id='mathml_f2f5662734d60a75b7216df2a533a8d33eb66a97_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-categories, functors, transformations, modifications, and so on, check out <a class='existingWikiWord' href='/nlab/show/transfor'>(n,k)-transformation</a>.</p>
-
-<p>(Some discussion from here has also been moved to there.)</p>
+<p>Such 2-functor 2-categories are the <a class='existingWikiWord' href='/nlab/show/hom-object'>hom-objects</a> in the <a class='existingWikiWord' href='/nlab/show/3-category'>3-category</a> <a class='existingWikiWord' href='/nlab/show/2Cat'>2Cat</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/2-functor+2-category'>2-functor 2-category</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/functor+category'>functor category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+of+%28infinity%2C1%29-functors'>(infinity,1)-category of (infinity,1)-functors</a></p>
+</li>
 </ul>
 
-<h2 id='references'>References</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Tom+Leinster'>Tom Leinster</a>, <em>Basic bicategories</em>, (<a href='http://arxiv.org/abs/math/9810017'>arXiv:math/9810017</a>)</li>
-</ul>
+<p>
+</p>
 
 <p>
  
@@ -550,22 +555,22 @@ C</annotation></semantics></math> a <math class='maruku-mathml' display='inline'
 
 <div class="revisedby">
   <p>
-  Last revised on July  6, 2018 at 14:13:36.
-  See the <a href="https://ncatlab.org/nlab/history/modification" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on July  6, 2018 at 14:15:48.
+  See the <a href="https://ncatlab.org/nlab/history/2-functor 2-category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/modification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/modification/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/modification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/modification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/modification/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/2-functor+2-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/2-functor 2-category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/modification" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/2-functor+2-category" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/modification" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/2-functor+2-category" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/modification" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/2-functor+2-category" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
