--- a/pages/19509.html
+++ b/pages/19509.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sheldon Glashow in nLab
+      Olivier Renaudin in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sheldon Glashow
+      Olivier Renaudin
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8706/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,28 +308,24 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li><a href='http://en.wikipedia.org/wiki/Sheldon_Lee_Glashow'>Wikipedia entry</a></li>
+<li><a href='https://www.genealogy.math.ndsu.nodak.edu/id.php?id=56210'>Mathematics Genealogy Page</a></li>
 </ul>
 
-<h2 id='writings'>Writings</h2>
+<h2 id='writing'>Writing</h2>
+
+<ul>
+<li id='Renaudin06'><a class='existingWikiWord' href='/nlab/show/Olivier+Renaudin'>Olivier Renaudin</a>, <em>Theories homotopiques de Quillen combinatoires et derivateurs de Grothendieck</em> (<a href='https://arxiv.org/abs/math/0603339'>arXiv:math/0603339</a>)</li>
+</ul>
+
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_411107e2f0826ec2e02131b9dacd61b330935f85_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Paul+Ginsparg'>Paul Ginsparg</a>, Sheldon Glashow, <em>Desperately Seeking Superstrings</em>, Phys.Today 86N5 (1986) 7-9 (<a href='https://arxiv.org/abs/physics/9403001'>arXiv:physics/9403001</a>, <a href='https://physicstoday.scitation.org/doi/10.1063/1.2814991'>doi:10.1063/1.2814991</a>)</p>
-
-<p>on <a class='existingWikiWord' href='/nlab/show/string+theory'>superstring theory</a></p>
-</li>
-</ul>
-
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_c8b3e589586cd2fcb14eb9ea804d81647ba1a3cc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/localization+of+a+2-category'>2-localization of a 2-category</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/GUT'>GUT</a>, <a class='existingWikiWord' href='/nlab/show/gauge+coupling+unification'>gauge coupling unification</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Ho%28CombModCat%29'>Ho(CombModCat)</a></p>
 </li>
 </ul>
 
@@ -338,22 +334,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July  6, 2018 at 14:03:41.
-  See the <a href="https://ncatlab.org/nlab/history/Sheldon Glashow" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on July  6, 2018 at 14:56:57.
+  See the <a href="https://ncatlab.org/nlab/history/Olivier Renaudin" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sheldon+Glashow" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sheldon+Glashow/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Sheldon+Glashow" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sheldon+Glashow" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Sheldon Glashow/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Olivier+Renaudin" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Olivier Renaudin/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Sheldon+Glashow" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Olivier+Renaudin" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Sheldon+Glashow" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Olivier+Renaudin" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sheldon+Glashow" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Olivier+Renaudin" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
