--- a/pages/4286.html
+++ b/pages/4286.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1492/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -657,7 +656,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -957,7 +956,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -1090,7 +1089,7 @@ margin-left: 0em;
 
 <p>A <em>black hole</em> is a <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> that solves <a class='existingWikiWord' href='/nlab/show/Einstein+equation'>Einstein equations</a> of <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a> characterized by the fact that it posseses an <strong><a class='existingWikiWord' href='/nlab/show/event+horizon'>event horizon</a></strong> hypersurface (or several of them) which has a number of special characteristics; for example the light can not escape from the space confined by the horizon hypersurface due to <a class='existingWikiWord' href='/nlab/show/gravity'>gravitational</a> effects. Much of the theoretical considerations are about the entropy of black holes (cf. <a class='existingWikiWord' href='/nlab/show/Bekenstein-Hawking+entropy'>Bekenstein-Hawking entropy</a>) and the information paradox.</p>
 
-<p>Black holes are considered theoretically for <a class='existingWikiWord' href='/nlab/show/gravity'>gravitational theories</a> in various number <math class='maruku-mathml' display='inline' id='mathml_1576e0b1aed7218543172194f252fda85175ccbd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math> of dimension. For <math class='maruku-mathml' display='inline' id='mathml_1576e0b1aed7218543172194f252fda85175ccbd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>≥</mo><mn>5</mn></mrow><annotation encoding='application/x-tex'>d \geq 5</annotation></semantics></math> a black hole <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> may have nontrivial <a class='existingWikiWord' href='/nlab/show/topology'>topology</a>, e.g. <em><a class='existingWikiWord' href='/nlab/show/black+ring'>black rings</a></em> are possible.</p>
+<p>Black holes are considered theoretically for <a class='existingWikiWord' href='/nlab/show/gravity'>gravitational theories</a> in various number <math class='maruku-mathml' display='inline' id='mathml_1eb72d67433ce10d4f811d87eccef0fb1e663346_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math> of dimension. For <math class='maruku-mathml' display='inline' id='mathml_1eb72d67433ce10d4f811d87eccef0fb1e663346_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>≥</mo><mn>5</mn></mrow><annotation encoding='application/x-tex'>d \geq 5</annotation></semantics></math> a black hole <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> may have nontrivial <a class='existingWikiWord' href='/nlab/show/topology'>topology</a>, e.g. <em><a class='existingWikiWord' href='/nlab/show/black+ring'>black rings</a></em> are possible.</p>
 
 <h2 id='examples'>Examples</h2>
 
@@ -1108,7 +1107,7 @@ margin-left: 0em;
 
 <h3 id='topology'>Topology</h3>
 
-<p>Hawking’s <em>Theorem of Black Hole topology</em> asserts that the in case of <math class='maruku-mathml' display='inline' id='mathml_1576e0b1aed7218543172194f252fda85175ccbd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>d = 4</annotation></semantics></math> asymptotically flat stationary black holes satisfying the suitable <a class='existingWikiWord' href='/nlab/show/energy+condition'>dominant energy condition</a>, the cross sections of the <a class='existingWikiWord' href='/nlab/show/event+horizon'>event horizon</a> are spherical.</p>
+<p>Hawking’s <em>Theorem of Black Hole topology</em> asserts that the in case of <math class='maruku-mathml' display='inline' id='mathml_1eb72d67433ce10d4f811d87eccef0fb1e663346_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>d = 4</annotation></semantics></math> asymptotically flat stationary black holes satisfying the suitable <a class='existingWikiWord' href='/nlab/show/energy+condition'>dominant energy condition</a>, the cross sections of the <a class='existingWikiWord' href='/nlab/show/event+horizon'>event horizon</a> are spherical.</p>
 
 <p><a href='#GallowaySchoen'>Galloway and Schoen</a> extended this theorem to higher dimensions; they showed that the cross sections of event horizon (stationary case) and the outer (apparent) horizon (general case) are of Yamabe type.</p>
 
@@ -1155,6 +1154,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Penrose-Hawking+theorem'>Penrose-Hawking singularity theorem</a>, <a class='existingWikiWord' href='/nlab/show/cosmic+censorship+hypothesis'>cosmic censorship hypothesis</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/extremal+black+hole'>extremal black hole</a></p>
 </li>
 
 <li>
@@ -1251,19 +1254,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  9, 2017 05:17:39 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (88.64.51.223)
+  <p>
+  Last revised on July  7, 2018 at 01:02:08.
+  See the <a href="https://ncatlab.org/nlab/history/black hole" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/black+hole" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/black+hole/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/black+hole" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/black+hole" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/black+hole" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/black+hole/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/black+hole" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/black+hole" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/black hole/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/black+hole" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/black+hole" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/black+hole" id="view_source" rel="nofollow">Source</a>
